@@ -1,10 +1,13 @@
 #
 # $Log: PKGBUILD.in,v $
+# Revision 1.2  2021-08-02 11:20:03+05:30  Cprogrammer
+# replaced DESTDIR with pkgdir
+#
 # Revision 1.1  2021-08-02 10:00:56+05:30  Cprogrammer
 # Initial revision
 #
 #
-# $Id: PKGBUILD.in,v 1.1 2021-08-02 10:00:56+05:30 Cprogrammer Exp mbhangui $
+# $Id: PKGBUILD.in,v 1.2 2021-08-02 11:20:03+05:30 Cprogrammer Exp mbhangui $
 #
 # Maintainer: @email@
 pkgname=ucspi-tcp
@@ -49,12 +52,12 @@ package() {
   depends=('shadow' 'libqmail>0.3')
   cd $srcdir/$pkgname-${pkgver}
   ./qmake -s DESTDIR=${pkgdir} install
-  ./installer -fc ${DESTDIR}                          < DIRS
-  ./installer -fc ${DESTDIR}${_prefix}                < BIN
-  ./installer -fc ${DESTDIR}${_shareddir}             < SHARED
-  ./installer -fc ${DESTDIR}${_prefix}"/lib/indimail" < PLUGINS
-  ./installer -fc ${DESTDIR}${_libexecdir}            < LIBEXEC
-  ./installer -fc ${DESTDIR}${_mandir}                < MAN
+  ./installer -fc ${pkgdir}                          < DIRS
+  ./installer -fc ${pkgdir}${_prefix}                < BIN
+  ./installer -fc ${pkgdir}${_shareddir}             < SHARED
+  ./installer -fc ${pkgdir}${_prefix}"/lib/indimail" < PLUGINS
+  ./installer -fc ${pkgdir}${_libexecdir}            < LIBEXEC
+  ./installer -fc ${pkgdir}${_mandir}                < MAN
 
   install -D -m 0644 ${pkgname}.changes "$pkgdir"${_shareddir}/doc/${pkgname}.changes
   cd $srcdir
