@@ -50,6 +50,7 @@ o dotls transparent SSL/TLS wrapper for tcpserver
     permissions after installation
 23. Makefile: create directories using installer instead of Makefile
 24. PKGBUILD: fix permissions of installed files in destdir
+25. PKGBUILD: replaced DESTDIR with pkgdir
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 21/05/2020
